--- a/.github/workflows/design.yml
+++ b/.github/workflows/design.yml
@@ -1,4 +1,7 @@
 - name: html to pdf
+on:
+  push:
+    branches: [ "master" ]
   uses: fifsky/html-to-pdf-action@master
   with:
     htmlFile: ./public/index.html
