--- a/.github/workflows/design.yml
+++ b/.github/workflows/design.yml
@@ -1,9 +1,18 @@
-- name: html to pdf
+name: html to pdf
+
 on:
   push:
     branches: [ "master" ]
-  uses: fifsky/html-to-pdf-action@master
-  with:
-    htmlFile: ./public/index.html
-    outputFile: ./public/resume.pdf
-    pdfOptions: '{"format": "A4", "margin": {"top": "10mm", "left": "10mm", "right": "10mm", "bottom": "10mm"}}'
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Convert HTML to PDF
+        uses: fifsky/html-to-pdf-action@master
+        with:
+          htmlFile: ./public/index.html
+          outputFile: ./public/resume.pdf
+          pdfOptions: '{"format": "A4", "margin": {"top": "10mm", "left": "10mm", "right": "10mm", "bottom": "10mm"}}'
