--- a/.github/workflows/design.yml
+++ b/.github/workflows/design.yml
@@ -8,7 +8,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
       - name: Convert HTML to PDF
         uses: fifsky/html-to-pdf-action@master
